--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Artyom Pavlov <newpavlov@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
-description = "TNEF parser"
+description = "A basic TNEF parser written in pure Rust"
 documentation = "https://docs.rs/tnef"
 repository = "https://github.com/newpavlov/tnef"
 keywords = ["email", "microsoft"]
